--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
             </li>
             <li><a href="">News</a></li>
             <li><a href="">Song</a></li>
-            <li class="login_signup"><a href="">Login</a></li>
+            <li class="login_signup"><a href="./Login.html">Login</a></li>
             <li><a href="">Sign up</a></li>
         </ul>
-
     </div>
     <div id="banner">
         <img src="./poster-jennie3.jpg" alt="Poster_Jennie">
